force-app/main/default/objects/Fixed_Price_Staging_Table__c/Fixed_Price_Staging_Table__c.object-meta.xml
<CustomObject>
    <label>Fixed Price Staging Table</label>
    <nameField>
        <displayFormat>GSAP-{000000000}</displayFormat>
        <label>Fixed Price Staging Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Price Staging Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>