force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/Last_Edited__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited__c</fullName>
    <formula>TEXT (CreatedDate + (8/24))</formula>
    <label>Last Edited</label>
    <type>Text</type>
</CustomField>