force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Application__c.field-meta.xml
<CustomField>
    <fullName>RE_Application__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>