force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Calculation_type__c.field-meta.xml
<CustomField>
    <fullName>RE_Calculation_type__c</fullName>
    <label>Calculation type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>