force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Change__c.field-meta.xml
<CustomField>
    <fullName>RE_Change__c</fullName>
    <label>Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>