force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Cond_table_no__c.field-meta.xml
<CustomField>
    <fullName>RE_Cond_table_no__c</fullName>
    <label>Cond table no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>