force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Cond_Usage_Table__c.field-meta.xml
<CustomField>
    <fullName>RE_Cond_Usage_Table__c</fullName>
    <label>Cond Usage Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>