force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_condRecordnumber__c.field-meta.xml
<CustomField>
    <fullName>RE_condRecordnumber__c</fullName>
    <label>condRecordnumber</label>
    <type>TextArea</type>
</CustomField>