force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Cost_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Price</label>
    <referenceTo>RE_MY_CostPrice__c</referenceTo>
    <relationshipLabel>Fixed Price Staging Table</relationshipLabel>
    <relationshipName>Fixed_Price_Staging_Table_CND_CP</relationshipName>
    <type>Lookup</type>
</CustomField>