force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Currency_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Currency_Unit__c</fullName>
    <label>Currency Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>