force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Discount__c</fullName>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>