force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>RE_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>