force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Error__c.field-meta.xml
<CustomField>
    <fullName>RE_Error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>