force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>RE_Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>