force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Final_Price_Rebate__c.field-meta.xml
<CustomField>
    <fullName>RE_Final_Price_Rebate__c</fullName>
    <label>Final Price Rebate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>