force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Forecast_Margin_Above_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Forecast_Margin_Above_MC__c</fullName>
    <label>Forecast Margin Above MC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>