force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_IdnForFix__c.field-meta.xml
<CustomField>
    <fullName>RE_IdnForFix__c</fullName>
    <label>IdnForFix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>