force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Initial_Version__c.field-meta.xml
<CustomField>
    <fullName>RE_Initial_Version__c</fullName>
    <label>RE Initial Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>