force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Is_CBU__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_CBU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CBU</label>
    <type>Checkbox</type>
</CustomField>