force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Job_Run_Audit__c.field-meta.xml
<CustomField>
    <fullName>RE_Job_Run_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Job Run Audit</label>
    <referenceTo>RE_Job_Run_Audit__c</referenceTo>
    <relationshipLabel>Fixed Price Staging Table</relationshipLabel>
    <relationshipName>Fixed_Price_Staging_Table</relationshipName>
    <type>Lookup</type>
</CustomField>