force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_List_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_List_Price__c</fullName>
    <label>List Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>