force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>