force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>RE_Material_Description__c</fullName>
    <label>Material Description</label>
    <type>TextArea</type>
</CustomField>