force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_MIDday_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_MIDday_Price__c</fullName>
    <label>MIDday Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>