force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Pricing_Condition__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Condition__c</fullName>
    <label>Pricing Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>