force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>