force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RE_Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>