force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Record_Key__c.field-meta.xml
<CustomField>
    <fullName>RE_Record_Key__c</fullName>
    <description>Used for storing combination of Varkey+StartDate+EndDate for version control</description>
    <label>RE Record Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>