force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YD07</fullName>
            </value>
            <value>
                <fullName>YD04</fullName>
            </value>
            <value>
                <fullName>YD03</fullName>
            </value>
            <value>
                <fullName>YP01</fullName>
            </value>
            <value>
                <fullName>YP02</fullName>
            </value>
            <value>
                <fullName>YP07</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>