force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>