force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_ScaleAmount__c.field-meta.xml
<CustomField>
    <fullName>RE_ScaleAmount__c</fullName>
    <label>ScaleAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>