force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_ScaleDate__c.field-meta.xml
<CustomField>
    <fullName>RE_ScaleDate__c</fullName>
    <label>ScaleDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>