force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_ScaleQuantity__c.field-meta.xml
<CustomField>
    <fullName>RE_ScaleQuantity__c</fullName>
    <label>ScaleQuantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>