force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_ScaleTime__c.field-meta.xml
<CustomField>
    <fullName>RE_ScaleTime__c</fullName>
    <label>ScaleTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>