force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_ScaleUOM__c.field-meta.xml
<CustomField>
    <fullName>RE_ScaleUOM__c</fullName>
    <label>ScaleUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>