force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>RE_Sequence_No__c</fullName>
    <label>Sequence No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>