force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Service_SurChg__c.field-meta.xml
<CustomField>
    <fullName>RE_Service_SurChg__c</fullName>
    <label>Service SurChg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>