force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Sold_To__c</fullName>
    <label>Sold To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>