force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Status__c.field-meta.xml
<CustomField>
    <fullName>RE_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>