force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Std_Disc__c.field-meta.xml
<CustomField>
    <fullName>RE_Std_Disc__c</fullName>
    <label>Std Disc(Tier based)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>