force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Uom__c.field-meta.xml
<CustomField>
    <fullName>RE_Uom__c</fullName>
    <label>Uom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>