force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_Valid_From__c</fullName>
    <label>Valid From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>