force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>