force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Value_to__c.field-meta.xml
<CustomField>
    <fullName>RE_Value_to__c</fullName>
    <label>Value to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>