force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/RE_Varkey__c.field-meta.xml
<CustomField>
    <fullName>RE_Varkey__c</fullName>
    <label>Varkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>