force-app/main/default/objects/Fixed_Price_Staging_Table__c/fields/REV_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>REV_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REV Price Book</label>
    <referenceTo>RT_Price_Book__c</referenceTo>
    <relationshipLabel>Fixed Price Staging table</relationshipLabel>
    <relationshipName>Fixed_Price_Staging_table</relationshipName>
    <type>Lookup</type>
</CustomField>