force-app/main/default/objects/Fixed_Price_Staging_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Is_latest__c</columns>
    <columns>RE_Status__c</columns>
    <columns>RE_IdnForFix__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>