force-app/main/default/objects/Fixed_Price_Staging_Table__c/listViews/Canada_SAP_Upload.listView-meta.xml
<ListView>
    <fullName>Canada_SAP_Upload</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Canada SAP Upload</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>